force-app/main/default/objects/Contreparties__c/Contreparties__c.object-meta.xml
<CustomObject>
    <label>Contrepartie</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nom de Contreparties</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contreparties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>