force-app/main/default/objects/Contreparties__c/fields/Action_realise__c.field-meta.xml
<CustomField>
    <fullName>Action_realise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action réalisée</label>
    <type>Checkbox</type>
</CustomField>