force-app/main/default/objects/Contreparties__c/fields/Commentaire_contrepartie__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_contrepartie__c</fullName>
    <label>Commentaire contrepartie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>