force-app/main/default/objects/Contreparties__c/fields/Contrepartie__c.field-meta.xml
<CustomField>
    <fullName>Contrepartie__c</fullName>
    <label>Contrepartie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Programme__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Plaque collective</fullName>
            </value>
            <value>
                <fullName>Plaque 0,1 x 0,1 m Hall of Fame</fullName>
            </value>
            <value>
                <fullName>Plaque 0,2 x 0,2 m Hall of Fame</fullName>
            </value>
            <value>
                <fullName>Plaque 0,3 x 0,2 m Hall of Fame</fullName>
            </value>
            <value>
                <fullName>Plaque 0,5 x 0,2 m Hall of Fame</fullName>
            </value>
            <value>
                <fullName>Plaque 0,5 x 0,5 m Hall of Fame</fullName>
            </value>
            <value>
                <fullName>Panneau 1 m x 1 m Hall of Fame</fullName>
            </value>
            <value>
                <fullName>1 ouvrage dédicacé d’un professeur EMLYON</fullName>
            </value>
            <value>
                <fullName>2 ouvrages dédicacés de professeurs EMLYON</fullName>
            </value>
            <value>
                <fullName>3 ouvrages dédicacés de professeurs EMLYON</fullName>
            </value>
            <value>
                <fullName>5 ouvrages dédicacés de professeurs EMLYON</fullName>
            </value>
            <value>
                <fullName>Tous ouvrages publiés</fullName>
            </value>
            <value>
                <fullName>Gratuité 1 Soirée Performance</fullName>
            </value>
            <value>
                <fullName>Gratuité 2 Soirées Performance</fullName>
            </value>
            <value>
                <fullName>Gratuité Soirées Performance</fullName>
            </value>
            <value>
                <fullName>Adhésion à vie EMLYON FOREVER</fullName>
            </value>
            <value>
                <fullName>Prise de parole à 1 remise des annuaires EMLYON FOREVER</fullName>
            </value>
            <value>
                <fullName>Prise de parole à la cérémonie de remise des diplômes</fullName>
            </value>
            <value>
                <fullName>Gratuité Forum</fullName>
            </value>
            <value>
                <fullName>Citation sur toutes les publications</fullName>
            </value>
            <value>
                <fullName>Membre du jury Meilleur projet Etudiant, meilleur travail de recherche</fullName>
            </value>
            <value>
                <fullName>1 journée de recrutement par an</fullName>
            </value>
            <value>
                <fullName>Membre Internationnal Advisory Board</fullName>
            </value>
            <value>
                <fullName>Citations sur Publications Corporate</fullName>
            </value>
            <value>
                <fullName>Accès VIP gratuit aux manifestations EMLYON</fullName>
            </value>
            <value>
                <fullName>2 journées par an de recrutement et de présentation</fullName>
            </value>
            <value>
                <fullName>Mention du nom sur le mur des donateurs</fullName>
            </value>
            <value>
                <fullName>Mention du nom sur le site de la Fondation</fullName>
            </value>
            <value>
                <fullName>Certificat de donateur</fullName>
            </value>
            <value>
                <fullName>Envoi du rapport annuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>