force-app/main/default/objects/Contreparties__c/fields/Date_realisation__c.field-meta.xml
<CustomField>
    <fullName>Date_realisation__c</fullName>
    <label>Date de réalisation de l&apos;action</label>
    <type>Date</type>
</CustomField>