force-app/main/default/objects/Contreparties__c/fields/Detail_sur_mesure__c.field-meta.xml
<CustomField>
    <fullName>Detail_sur_mesure__c</fullName>
    <label>Détail sur mesure</label>
    <type>TextArea</type>
</CustomField>