force-app/main/default/objects/Contreparties__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <label>Programme de reconnaissance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_contrepartie__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>B2C_Niveau Zéro</fullName>
            </value>
            <value>
                <fullName>B2B_Mont Blanc</fullName>
            </value>
            <value>
                <fullName>B2C_Mont Blanc</fullName>
            </value>
            <value>
                <fullName>B2B_Kilimandjaro</fullName>
            </value>
            <value>
                <fullName>B2C_Kilimandjaro</fullName>
            </value>
            <value>
                <fullName>B2B_McKinley</fullName>
            </value>
            <value>
                <fullName>B2C_McKinley</fullName>
            </value>
            <value>
                <fullName>B2B_Annapura</fullName>
            </value>
            <value>
                <fullName>B2C_Annapura</fullName>
            </value>
            <value>
                <fullName>B2B_K2</fullName>
            </value>
            <value>
                <fullName>B2C_K2</fullName>
            </value>
            <value>
                <fullName>B2B_Everest</fullName>
            </value>
            <value>
                <fullName>B2C_Everest</fullName>
            </value>
            <value>
                <fullName>B2B_Cercle du Président</fullName>
            </value>
            <value>
                <fullName>B2C_Cercle du Président</fullName>
            </value>
            <value>
                <fullName>B2C_Contrepartie sur-mesure</fullName>
            </value>
            <value>
                <fullName>B2B_Contrepartie sur-mesure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>