force-app/main/default/objects/Contreparties__c/fields/Type_contrepartie__c.field-meta.xml
<CustomField>
    <fullName>Type_contrepartie__c</fullName>
    <label>Type contrepartie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>